perf: 지도 조회 병목 제거와 캐시 갱신 정합성 개선
지도 projection과 공간·검색 쿼리의 반복 처리를 줄이고 DB 조회 이후의 캐시·응답 조립을 트랜잭션에서 분리한다. 혜택 캐시의 일괄 조회·갱신 경계와 배경 작업·외부 호출의 지연 제한을 보강한다.